# braid

./: index.html  package-lock.json  package.json  pnpm-lock.yaml  ssh-spy.sh  vite.config.ts
src/: App.tsx  index.css  store.ts  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: claude.rs  conversation.rs  hook_server.rs  hooks.rs  lib.rs  main.rs  models.rs  settings.rs
src-tauri/src/jail/: cow.rs  error.rs  mod.rs  session_link.rs  vcs.rs  winfsp_overlay.rs
src/components/: Chat.tsx  Graph.tsx
