[package]
name = "braid"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "braid_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[target.'cfg(target_os = "windows")'.build-dependencies]
winfsp = "0.12"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "io-util", "sync", "net", "time"] }
tokio-stream = "0.1"
futures = "0.3"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
gix = { version = "0.72", default-features = false, features = ["basic", "parallel", "excludes"] }
sha2 = "0.10"
walkdir = "2"
dirs-next = "2"
bstr = "1"
chrono = "0.4"

[target.'cfg(target_os = "windows")'.dependencies]
winfsp = "0.12"
winfsp-sys = "0.12"

